# conan-gtest

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
conan/: profile
src/: conan-gtest.cpp  conan-gtest.h  do-stuff.cpp  do-stuff.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
test_package/: conanfile.py
